Fixed rail alignment.

--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -17,6 +17,7 @@ sitemap: false
 
 .ui.right.rail {
   width: 100% !important;
+  top: auto !important;
 }
 
 .inverted pre {
